--- a/css/style.css
+++ b/css/style.css
@@ -1064,7 +1064,7 @@ span.choose {
 
   .content .editorPanel
   {
-    width: 120%;
+    width: 100%;
     height: 700px;
     font-size: 24px;
   }
@@ -1152,9 +1152,13 @@ span.choose {
   }
 
   *{
-    zoom: 97%;
+    zoom: 98%;
   }
 
+
+  .divider .editorResize{
+    display: none;
+  }
 }
 
 
