--- a/css/style.css
+++ b/css/style.css
@@ -1155,6 +1155,13 @@ span.choose {
     zoom: 98%;
   }
 
+  html, body {
+    touch-action: none; /* Вимикає можливість зумування на сенсорних пристроях */
+    overflow: hidden; /* Вимикає прокрутку */
+    position: fixed; /* Фіксує сторінку, щоб вона не змінювала розмір */
+    width: 100%; /* Забезпечує ширину вікна перегляду */
+  }
+
 }
 
 
