--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,20 @@ h3 {
   transform: translate(0,-3px);
 }
 
+#inputFitch
+{
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  font-size: 38px;
+  font-family: 'Times New Roman', sans-serif;
+  margin-top: 1%;
+  display: none;
+}
+
+
+
 #proof {
   display: flex;
   flex-direction: column;
@@ -63,6 +77,20 @@ h3 {
   width: 80%;
   min-width: 80%;
   overflow: scroll;
+}
+
+#proof label
+{
+  font-size: 38px;
+}
+
+#proof .nameRule
+{
+  font-size: 32px;
+}
+
+#hypotheses-container, #hypotheses-container * {
+  font-size: 32px !important; /* Перевизначення шрифту з використанням !important */
 }
 
 .proof-element_level-0 {
@@ -127,7 +155,7 @@ label:hover
 
 
 .button-container button {
-  flex: 0 0 calc(33.33% - 20px); /* Розмір кнопки. Мінус 20px - це місце для відступів */
+  flex: 0 0 calc(33.33% - 200px); /* Розмір кнопки. Мінус 20px - це місце для відступів */
   /*margin: 30px;*/
   margin-left: 10px;
   background-color: white;
@@ -141,36 +169,11 @@ label:hover
   white-space: nowrap;
 }
 
-/*.container :only-child,*/
-/*.container :only-child + .button,*/
-/*.container :first-child:last-child {*/
-/*  margin: 0 auto;*/
-/*}*/
-
 .button-container button:hover
 {
   background-color: rgba(241, 241, 241, 0.85);
   /*zoom: 110%;*/
 }
-
-/*@media screen and (max-width: 750px) {*/
-/*  .button-container {*/
-/*    width: 400px; !* зменшуємо ширину контейнера для маленьких екранів *!*/
-/*    grid-template-columns: repeat(2, 1fr);*/
-/*    !*border-radius: 10px;*!*/
-/*  }*/
-
-/*  .button-container button {*/
-/*    font-size: 28px; !* зменшуємо розмір шрифту для маленьких екранів *!*/
-/*    !*max-width: 120px; !* зменшуємо максимальну ширину кнопки для маленьких екранів *!*!*/
-/*    padding: 40px 40px 40px 40px;*/
-/*  }*/
-/*  .button-container button:hover*/
-/*  {*/
-/*    background-color: white;*/
-/*    zoom: 100%;*/
-/*  }*/
-/*}*/
 
 
 
@@ -876,7 +879,7 @@ span.choose {
   opacity: 1;
 }
 
-/* tab bar 底線位移控制 */
+/* tab bar  */
 .tab-toggle:nth-child(2):checked ~ .tab-list::before {
   transform: translateX(100%);
 }
@@ -1197,3 +1200,116 @@ span.choose {
 {
   margin-right: 1%;
 }
+
+
+:focus {
+  outline: 0;
+  border-color: #2260ff;
+  box-shadow: 0 0 0 4px #b5c9fc;
+}
+
+.mydict div {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0.5rem;
+  justify-content: center;
+}
+
+.mydict input[type="radio"] {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.mydict input[type="radio"]:checked + span {
+  box-shadow: 0 0 0 0.0625em rgba(0, 97, 161, 1);;
+  background-color: #dee7ff;
+  z-index: 1;
+  color: rgba(0, 97, 161, 1);;
+}
+
+.mydict label span {
+  font-size: 21px;
+  font-family: 'Times New Roman', sans-serif;
+  display: block;
+  cursor: pointer;
+  background-color: #fff;
+  padding: 0.375em .75em;
+  position: relative;
+  margin-left: .0625em;
+  box-shadow: 0 0 0 0.0625em #b5bfd9;
+  letter-spacing: .05em;
+  color: rgba(0, 97, 161, 1);
+  text-align: center;
+  transition: background-color .5s ease;
+}
+
+.mydict label:first-child span {
+  border-radius: .375em 0 0 .375em;
+}
+
+.mydict label:last-child span {
+  border-radius: 0 .375em .375em 0;
+}
+
+
+/*Стилі Fitch*/
+#out_fitch{
+  display: flex;
+  white-space: nowrap;
+}
+
+#out_fitch *
+{
+  font-size: 32px;
+}
+
+#out_nums{
+  display: block;
+}
+
+#out_nums > div{
+  height: 41.55px;
+}
+
+#out_just
+{
+  margin-left: 1em;
+}
+
+#out_just > div{
+  height: 41.55px;
+}
+
+
+.fitch_branch {
+  border-left: 1px solid black;
+  margin-left: 1em;
+  width: fit-content;
+  padding-bottom: 40px;
+}
+
+.fitch_formula {
+  display: flex;
+  align-items: center; /* Центрує дочірні елементи по вертикалі */
+  /*justify-content: center; !* Центрує дочірні елементи по горизонталі *!*/
+  padding-left: 5px; /* Збереження вашого налаштування відступу */
+  cursor: pointer;
+  /*height: 39px; !* Встановіть фіксовану висоту або достатню висоту для вашого контенту *!*/
+  font-size: 34px !important;
+}
+
+.userFormula{
+  display: flex;
+}
+
+.userChoice{
+  display: block;
+}
+
+
+
