--- a/css/style.css
+++ b/css/style.css
@@ -954,7 +954,7 @@ span.choose {
 
 #latexInfo {
   white-space: pre-line;
-  font-size: 35px;
+  font-size: 32px;
   overflow-y: scroll;
   width: 95%;
   height: 65%;
@@ -962,7 +962,8 @@ span.choose {
 }
 #latexModal .helpNavbarItem
 {
-  font-size: 48px;
+  font-size: 32px;
+  color: rgb(80, 80, 80);
 }
 #copyLatexCode{
   margin-top: 2%;
