--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,6 @@ label:hover
 {
     display: none;
     justify-content: space-between;
-
 }
 
 #latex
@@ -468,6 +467,30 @@ label:hover
   box-shadow: rgba(0, 0, 0, 0.25) 0 2px 5px 0;
   border: none;
   outline: none;
+}
+
+.returnMain
+{
+  margin-bottom: 0.5%;
+  display: none;
+  width: 25%;
+  margin-left: -10px;
+}
+
+.returnMain button{
+  font-size: 26px;
+  background: rgb(255, 255, 255);
+  cursor: pointer;
+  display: flex;
+  border-radius: 5px;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  color: rgb(33, 33, 33);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 2px 5px 0;
+  border: none;
+  outline: none;
+  width: 100%
 }
 
 
